<resources>
    <string name="app_name">ALC 4.0</string>
    <string name="alcphase">ALC Phase 1</string>
    <string name="aboutAlc">About Alc</string>
    <string name="myprofile">My Profile</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="name">Mubangizi Allan</string>
    <string name="track">Track:</string>
    <string name="trackvalue">Android</string>
    <string name="country">Country:</string>
    <string name="countryvalue">Uganda</string>
    <string name="email">Email: </string>
    <string name="emailvalue">mubangizia22@gmail.com</string>
    <string name="phone">Phone Number:</string>
    <string name="phonevalue">256705754073</string>
    <string name="slack">Slack Username:</string>
    <string name="slackvalue">Mubangizi Allan</string>
    <string name="notification_error_ssl_cert_invalid">Cert invalid</string>
</resources>
